# comic-superpowers

./: .gitignore  00_initial_scrape.py  02_scrape_nombres.py  02_unique_superpowers.py  03_scrape_properties.py  A_test_queries.py  LICENSE  README.md  app.py  char_data.parquet  char_info.csv  char_sp.csv  char_team.csv  char_universe.csv  creators.csv  genders.csv  graph_plots.py  pyproject.toml  reqchars.py  requirements.txt  scrape_characters.py  superpowers.csv  teams.csv  universes.csv  x_men_ents.txt
data/: char_data.parquet  creators.csv  genders.csv  superpowers.csv  universes.csv
scrape/: 01_nombres_chars.py  02_properties.py  03_petscan_nombres_chars.py  04_char_claims.py  wiki_e_creator.parquet  wiki_e_power.parquet  wiki_e_team.parquet  wiki_links.parquet  wiki_links.txt  wiki_p_creator.parquet  wiki_p_power.parquet  wiki_p_team.parquet
