[project]
name = "comic-superpowers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pyvis>=0.3.2",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
]
